# toshokan-pub

./: Cargo.toml
fakedata/: Cargo.toml
fakedata/data/: first_name.csv  last_name.csv  works.csv
fakedata/src/: csv.rs  lib.rs
src/: application.rs  collection.rs  config.rs  db.rs  entry.rs  error.rs  lib.rs  library.rs  main.rs  params.rs  routes.rs  stats.rs  user.rs  utils.rs
templates/: chapter.jinja  home.jinja  login.jinja  signup.jinja  userhome.jinja  work.jinja
toshokan-sources/: Cargo.toml
toshokan-sources/src/: lib.rs  source.rs
uca-generate/: Cargo.toml  build.rs
uca-generate/src/: lib.rs  parser.rs
unicode-collate/: Cargo.toml
unicode-collate/src/: collate.rs  lib.rs
unicode-collate/tests/: non-ignorable.txt
