[package]
name = "toshokan"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["unicode-collate", "uca-generate", "toshokan-sources", "fakedata"]

[features]
mock = []
default = []

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
# serde_json = "1.0"
rand = "0.8"

serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }

minijinja = { version = "2.0", features = ["loader"] }
sled = "0.34"
uuid = { version = "1.8", features = ["v7", "serde"] }
url = "2.5.2"
base64 = "0.22.1"

unicode-collate = { path = "unicode-collate"}
fakedata = { path = "fakedata" }

tracing = "0.1"
tracing-subscriber = "0.3"

anyhow = "1.0"
etcetera = "0.8"

chrono = { version = "0.4.38", features = ["serde"] }
